--- a/CSS/style.css
+++ b/CSS/style.css
@@ -98,6 +98,10 @@ section .sub-containter-1 button {
     font-size: 16px;
 }
 
+button {
+    cursor: pointer;
+}
+
 section .sub-containter-1 h1 {
     font-size: 72px;
     font-weight: bold;
@@ -354,4 +358,59 @@ section .sub-containter-2 .but-sub-1, .but-sub-2 {
     color: #627382;
     font-size: 16px;
     line-height: 20px;
+}
+
+footer {
+    width: 100%;
+    background-color: #001931;
+    padding: 120px 120px 30px 120px;
+}
+
+.child-footer {
+    display: felx;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    gap: 80px;
+}
+
+footer .child-footer .devition1 {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    text-align: center;
+}
+
+footer .child-footer .devition1 .links {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: start;
+    color: white;
+    font-size: 20px;
+    line-height: 28px;
+    gap: 16px;
+    margin-right: 107px;
+}
+
+footer .child-footer .devition1 .links ul {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    gap: 16px;
+}
+
+footer .child-footer .devition1 .links ul li {
+    list-style: none;
+}
+
+footer .child-footer .devition2 {
+    padding-top: 30px;
+    text-align: center;
+    color: #FAFAFA;
+    font-size: 16px;
+    line-height: 24px;
+    border-top: 1px solid #e5e7eb3b;
+    margin-top: 80px;
 }
